--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-  <link rel="icon" href="images/favicon.svg" sizes="any" type="image/svg+xml">
+  <link rel="icon" href="../images/favicon.svg" sizes="any" type="image/svg+xml">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>Method Draw Vector Editor</title>
@@ -11,24 +11,23 @@
   <meta name="description" content="Method Draw is an open source SVG editor for the web, you can use it online without signing up.">
 
   <!-- build:css all.css -->
-  <link rel="stylesheet" href="css/base.css" type="text/css"/>
-  <link rel="stylesheet" href="css/port.css" type="text/css"/>
-  <link rel="stylesheet" href="css/jpicker.css" type="text/css"/>
-  <link rel="stylesheet" href="css/jgraduate.css" type="text/css"/>
-  <link rel="stylesheet" href="css/fonts.css" type="text/css"/>
-  <link rel="stylesheet" href="css/dropdown.css" type="text/css"/>
-  <link rel="stylesheet" href="css/draginput.css" type="text/css"/>
-  <link rel="stylesheet" href="css/menu.css" type="text/css"/>
-  <link rel="stylesheet" href="css/rulers.css" type="text/css"/>
-  <link rel="stylesheet" href="css/palette.css" type="text/css"/>
-  <link rel="stylesheet" href="css/color-tool.css" type="text/css"/>
-  <link rel="stylesheet" href="css/context-menu.css" type="text/css"/>
-  <link rel="stylesheet" href="css/shapelib.css" type="text/css"/>
-  <link rel="stylesheet" href="css/modal.css" type="text/css"/>
-  <link rel="stylesheet" href="css/source.css" type="text/css"/>
-  <link rel="stylesheet" href="css/keyboard.css" type="text/css"/>
-  <link rel="stylesheet" href="css/dialog.css" type="text/css"/>
-  <link rel="stylesheet" href="css/method-draw.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/base.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/jpicker.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/jgraduate.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/fonts.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/dropdown.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/draginput.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/menu.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/rulers.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/palette.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/color-tool.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/context-menu.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/shapelib.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/modal.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/source.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/keyboard.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/dialog.css" type="text/css"/>
+  <link rel="stylesheet" href="../css/method-draw.css" type="text/css"/>
   <!-- endbuild -->
 </head>
 <body>
@@ -67,20 +66,15 @@
     <div class="menu_title">File</div>
     <div class="menu_list" id="file_menu"> 
       <div data-action="clear" id="tool_clear" class="menu_item">New Document</div>
-      <div data-action="open" id="tool_copen" class="menu_item">Open SVG... </div>
-      <div data-action="cloudSave" id="tool_csave" class="menu_item disabled">Save</div>
-      <div data-action="cloudSaveAs" id="tool_csaveas" class="menu_item">Save as<span class="shortcut">⌘S</span></div>
-      <div data-action="del" id="tool_cdel" class="menu_item disabled">Delete </div>
       
       <div id="tool_open" class="menu_item">
-        Import SVG... <span class="shortcut">⌘O</span>
-      </div>
+        Open SVG... <span class="shortcut">⌘O</span></div>
       <input type="file" accept="image/svg+xml" />
       
       <div id="tool_import" class="menu_item">
         Place Image... <span class="shortcut">⌘K</span></div>
-      <input type="file" accept="image/*" />
-      <div data-action="save" id="tool_save" class="menu_item">Export SVG... </div>
+        <input type="file" accept="image/*" />
+      <div data-action="save" id="tool_save" class="menu_item">Export Image... <span class="shortcut">⌘S</span></div>
       <div data-action="export" id="tool_export" class="menu_item">Export as PNG</div>
     </div>
   </div>
@@ -123,14 +117,6 @@
         <div class="separator"></div>
         <div class="menu_item" id="tool_source" data-action="source">Source... <span class="shortcut">⌘U</span></div>
     </div>
-  </div>
-  <div class="share_btn_div">
-    <div class="share_btn" id="share">
-      Share
-    </div>
-  </div>
-  <div class="menu">
-    <strong id="save_name" class="menu_title">untitled.svg</strong>
   </div>
 </div>
 
@@ -718,58 +704,57 @@
 </div>
 
 <!-- build:js all.js -->
-  <script type="text/javascript" src="js/lib/jquery-3.5.1.min.js"></script>
-  <script type="text/javascript" src="js/lib/pathseg.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.hotkeys.min.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.jgraduate.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.contextMenu.js"></script>
-  <script type="text/javascript" src="js/lib/jquery-ui-1.8.17.custom.min.js"></script>
-  <script type="text/javascript" src="js/jquery.attr.js"></script>
-  <script type="text/javascript" src="js/lib/jquery-draginput.js"></script>
-  <script type="text/javascript" src="js/utils.js"></script>
-  <script type="text/javascript" src="js/dao.js"></script>
-  <script type="text/javascript" src="js/state.js"></script>
-  <script type="text/javascript" src="js/sanitize.js"></script>
-  <script type="text/javascript" src="js/browser.js"></script>
-  <script type="text/javascript" src="js/svgutils.js"></script>
-  <script type="text/javascript" src="js/history.js"></script>
-  <script type="text/javascript" src="js/select.js"></script>
-  <script type="text/javascript" src="js/path.js"></script>
-  <script type="text/javascript" src="js/sanitize.js"></script>
-  <script type="text/javascript" src="js/units.js"></script>
-  <script type="text/javascript" src="js/math.js"></script>
-  <script type="text/javascript" src="js/translate.js"></script>
-  <script type="text/javascript" src="js/svgtransformlist.js"></script>
-  <script type="text/javascript" src="js/draw.js"></script>
-  <script type="text/javascript" src="js/svgcanvas.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="../js/lib/pathseg.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery.hotkeys.min.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery.jgraduate.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery.contextMenu.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery-ui-1.8.17.custom.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.attr.js"></script>
+  <script type="text/javascript" src="../js/lib/jquery-draginput.js"></script>
+  <script type="text/javascript" src="../js/utils.js"></script>
+  <script type="text/javascript" src="../js/dao.js"></script>
+  <script type="text/javascript" src="../js/state.js"></script>
+  <script type="text/javascript" src="../js/sanitize.js"></script>
+  <script type="text/javascript" src="../js/browser.js"></script>
+  <script type="text/javascript" src="../js/svgutils.js"></script>
+  <script type="text/javascript" src="../js/history.js"></script>
+  <script type="text/javascript" src="../js/select.js"></script>
+  <script type="text/javascript" src="../js/path.js"></script>
+  <script type="text/javascript" src="../js/sanitize.js"></script>
+  <script type="text/javascript" src="../js/units.js"></script>
+  <script type="text/javascript" src="../js/math.js"></script>
+  <script type="text/javascript" src="../js/translate.js"></script>
+  <script type="text/javascript" src="../js/svgtransformlist.js"></script>
+  <script type="text/javascript" src="../js/draw.js"></script>
+  <script type="text/javascript" src="../js/svgcanvas.js"></script>
   <script type="text/javascript" src="js/editor.js"></script>
-  <script type="text/javascript" src="js/Canvas.js"></script>
-  <script type="text/javascript" src="js/Text.js"></script>
-  <script type="text/javascript" src="js/Pan.js"></script>
-  <script type="text/javascript" src="js/Panel.js"></script>
-  <script type="text/javascript" src="js/Rulers.js"></script>
-  <script type="text/javascript" src="js/Toolbar.js"></script>
+  <script type="text/javascript" src="../js/Canvas.js"></script>
+  <script type="text/javascript" src="../js/Text.js"></script>
+  <script type="text/javascript" src="../js/Pan.js"></script>
+  <script type="text/javascript" src="../js/Panel.js"></script>
+  <script type="text/javascript" src="../js/Rulers.js"></script>
+  <script type="text/javascript" src="../js/Toolbar.js"></script>
   <script type="text/javascript" src="js/Menu.js"></script>
   <script type="text/javascript" src="js/Keyboard.js"></script>
   <script type="text/javascript" src="js/Import.js"></script>
-  <script type="text/javascript" src="js/PaintBox.js"></script>
-  <script type="text/javascript" src="js/Palette.js"></script>
-  <script type="text/javascript" src="js/Zoom.js"></script>
-  <script type="text/javascript" src="js/Modal.js"></script>
-  <script type="text/javascript" src="js/ContextMenu.js"></script>
-  <script type="text/javascript" src="js/Shapelib.js"></script>
-  <script type="text/javascript" src="js/fonts.js"></script>
-  <script type="text/javascript" src="js/dialog.js"></script>
-  <script type="text/javascript" src="js/lib/contextmenu.js"></script>
-  <script type="text/javascript" src="js/lib/jpicker.min.js"></script>
-  <script type="text/javascript" src="js/lib/mousewheel.js"></script>
-  <script type="text/javascript" src="js/eyedropper.js"></script>
+  <script type="text/javascript" src="../js/PaintBox.js"></script>
+  <script type="text/javascript" src="../js/Palette.js"></script>
+  <script type="text/javascript" src="../js/Zoom.js"></script>
+  <script type="text/javascript" src="../js/Modal.js"></script>
+  <script type="text/javascript" src="../js/ContextMenu.js"></script>
+  <script type="text/javascript" src="../js/Shapelib.js"></script>
+  <script type="text/javascript" src="../js/fonts.js"></script>
+  <script type="text/javascript" src="../js/dialog.js"></script>
+  <script type="text/javascript" src="../js/lib/contextmenu.js"></script>
+  <script type="text/javascript" src="../js/lib/jpicker.min.js"></script>
+  <script type="text/javascript" src="../js/lib/mousewheel.js"></script>
+  <script type="text/javascript" src="../js/eyedropper.js"></script>
   <!--<script type="text/javascript" src="js/grid.js"></script>-->
-  <script type="text/javascript" src="js/api.js"></script>
-  <script type="text/javascript" src="js/lib/requestanimationframe.js"></script>
-  <script type="text/javascript" src="js/lib/taphold.js"></script>
-  <script type="text/javascript" src="js/lib/filesaver.js"></script>
-  <script type="text/javascript" src="js/paste.js"></script>
+  <script type="text/javascript" src="../js/lib/requestanimationframe.js"></script>
+  <script type="text/javascript" src="../js/lib/taphold.js"></script>
+  <script type="text/javascript" src="../js/lib/filesaver.js"></script>
+  <script type="text/javascript" src="../js/paste.js"></script>
   <script type="text/javascript" src="js/start.js"></script>
 
 
