--- a/src/index.html
+++ b/src/index.html
@@ -74,19 +74,13 @@
         </div>
       </a>
 
-      <div class="menu">
+      <div class="menu" id="file_menu_main">
         <div class="menu_title">File</div>
         <div class="menu_list" id="file_menu">
           <div data-action="clear" id="tool_clear" class="menu_item">New Document</div>
-
-          <!-- Deta-ify -->
           <div id="tool_open" class="menu_item">
             Open SVG... <span class="shortcut">⌘O</span></div>
           <input type="file" accept="image/svg+xml" />
-
-          <div data-action="cloudSave" id="tool_csaveas" class="menu_item">Save As<span class="shortcut">⌘S</span>
-          </div>
-
           <div id="tool_import" class="menu_item">
             Place Image... <span class="shortcut">⌘K</span></div>
           <input type="file" accept="image/*" />
