--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="Method Draw is an open source SVG editor for the web, you can use it online without signing up.">
 
   <!-- build:css all.css -->
+  <link rel="stylesheet" href="css/cloud_features.css" type="text/css"/>
   <link rel="stylesheet" href="css/base.css" type="text/css"/>
   <link rel="stylesheet" href="css/jpicker.css" type="text/css"/>
   <link rel="stylesheet" href="css/jgraduate.css" type="text/css"/>
@@ -73,15 +74,18 @@
     <div class="menu_title">File</div>
     <div class="menu_list" id="file_menu"> 
       <div data-action="clear" id="tool_clear" class="menu_item">New Document</div>
-      
+      <div data-action="cloudOpen" id="tool_copen" class="menu_item">Open</div>
+      <div data-action="cloudSave" id="tool_csave" class="menu_item">Save</div>
+      <div data-action="cloudSaveAs" id="tool_csaveas" class="menu_item">Save as</div>
+      <div data-action="cloudDelete" id="tool_cdelete" class="menu_item disabled">Delete from cloud</div>
       <div id="tool_open" class="menu_item">
-        Open SVG... <span class="shortcut">⌘O</span></div>
+        Import SVG... <span class="shortcut">⌘O</span></div>
       <input type="file" accept="image/svg+xml" />
       
       <div id="tool_import" class="menu_item">
         Place Image... <span class="shortcut">⌘K</span></div>
         <input type="file" accept="image/*" />
-      <div data-action="save" id="tool_save" class="menu_item">Save Image... <span class="shortcut">⌘S</span></div>
+      <div data-action="save" id="tool_save" class="menu_item">Export SVG... <span class="shortcut">⌘S</span></div>
       <div data-action="export" id="tool_export" class="menu_item">Export as PNG</div>
     </div>
   </div>
@@ -124,6 +128,10 @@
         <div class="separator"></div>
         <div class="menu_item" id="tool_source" data-action="source">Source... <span class="shortcut">⌘U</span></div>
     </div>
+  </div>
+
+  <div class="menu">
+    <strong id="save_name" class="menu_title">untitled.svg</strong>
   </div>
 </div>
 
@@ -776,6 +784,7 @@
   <script type="text/javascript" src="js/lib/mousewheel.js"></script>
   <script type="text/javascript" src="js/eyedropper.js"></script>
   <!--<script type="text/javascript" src="js/grid.js"></script>-->
+  <script type="text/javascript" src="js/api.js"></script>
   <script type="text/javascript" src="js/lib/requestanimationframe.js"></script>
   <script type="text/javascript" src="js/lib/taphold.js"></script>
   <script type="text/javascript" src="js/lib/filesaver.js"></script>
