open with deta.js

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" href="css/text.css" type="text/css" />
   <!-- deta stuff -->
   <script type="text/javascript" src="js/api.js"></script>
+  <script type="text/javascript" src="js/deta.js"></script>
   <link rel="stylesheet" href="css/deta.css" type="text/css" />
   <!-- endbuild -->
 </head>
